tests/unit-fail-compilation/j067c.ref
j067c.c:2:1: error: Conflicting types for x.
  Constraint violation (CV-TDG10). See C11 sec. 6.7:4
Translation failed (config dumped). Run kcc -d j067c.c to see commands run.
