tests/unit-fail-compilation/j067c.c
int x;
volatile int x;

int main(void) {
      return 0;
}
